syntax = "proto3";

package swarm;

import "simulation/swarm/proto/physical_config.proto";
import "simulation/swarm/proto/state.proto";
import "simulation/swarm/proto/plotting_config.proto";

// Target swarm configuration.
message TargetSwarmConfig {
  // Number of targets.
  uint32 num_targets = 1;

  // State mean.
  State mean = 2;

  // State standard deviation.
  State standard_deviation = 3;

  // Physical configuration.
  PhysicalConfig physical_config = 4;

  // Plotting configuration.
  PlottingConfig plotting_config = 5;
}
